site.css
a:link {
  text-decoration: none;
  /* color: inherit; */
}

.container-header .subheading {
  font-size: 1.3rem;
}

.box-link {
  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
}

.box-link:hover {
  cursor: pointer;
  background-color: rgba(220, 220, 220, 0.158);
}
.avatar-img img {
  height: 20rem;
  width: 20rem;
}

.container {
  max-width: 50rem !important;
}

.skills-header h3,
.projects-header h3 {
  font-size: 1.2rem;
}

.box {
  background-color: rgba(220, 220, 220, 0.158);
  width: 7rem;
}

.box img {
  height: 1rem;
  width: 1rem;
}

.card {
  width: 13rem;
  background-color: rgba(220, 220, 220, 0.158) !important;
}

.card img {
  object-fit: contain;
  height: 12.5rem;
  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
}

.card-title {
  min-height: 2rem;
  font-size: 1rem;
}

.card-text {
  min-height: 5rem;
}

@media screen and (min-width: 360px) {
  .card {
    width: 18rem;
  }
}

@media screen and (min-width: 768px) {
  .card {
    width: 13rem;
  }
}

@media screen and (min-width: 991px) {
}

